# Reliquary

./: .gitignore  README.md  api-design.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  version.txt
.github/workflows/: build.yml  release.yml  test.yml
.vibecheck/: last-score.json
.vibecheck/flow/: config.json
.vibecheck/provenance/: attestations.db  edits.jsonl
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api_server.rs  appstate.rs  drivelist.rs  dual_viewer.rs  embedhelp.rs  fileops.rs  installed_apps.rs  lilim_client.rs  listfiles.rs  main.rs  undoops.rs
src/app/: layout.tsx  page.tsx
src/app/chatui/: page.tsx
src/app/diffview/: page.tsx
src/app/filegpt/: page.tsx
src/app/installed-apps/: page.tsx
src/app/settings/: page.tsx
src/components/: FileOperationProgress.tsx  InstalledApps.tsx  InstalledAppsforSidebar.tsx  ZoomableContent.tsx  ad.tsx  filedimesettings.tsx  gptchatinterface.tsx  greet.tsx  grideach.tsx  readfile.tsx  switchsettingseach.tsx
src/components/batu/components/: chat-interface.tsx  chatui.tsx  fileupoader.tsx
src/shared/: apiClient.js
src/src/components/: data-table.tsx
src/styles/: globals.css
