[package]
name = "reliquary"
version = "1.0.0"
description = "A feature-rich file manager for Lilith Linux with AI integration."
authors = ["BlancoBAM"]
license = "MIT"
repository = "https://github.com/BlancoBAM/Reliquary"
edition = "2021"

# [build]
# target-dir="H:\\rust_deps\\"

# [profile.dev]
# # opt-level = 1
# debug = 1
# incremental = true
# debug-assertions = false
# overflow-checks = false
# # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# [profile.dev.package."*"]
# # opt-level = 3

[profile.release]
# strip = true  # Automatically strip symbols from the binary.
# opt-level = "z"
# lto = true
# panic = "abort"

# [lib]
# crate-type = ["dylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.6", features = [] }

[dependencies]
local-ip-address="0.6.1"
# fs_extra= {git="https://github.com/visnkmr/fs_extra.git"} #"1.3.0"
fs_extra= {path="../fs_extra/"} #"1.3.0"
syntect= {version="5.2.0",features= ["default-fancy"] }
# prefstore= {path="../../../rust/prefstore/prefstore"}
prefstore= {git="https://github.com/visnkmr/prefstore.git"}
tauri = { version = "1.8.3", features = [ "dialog-open", "devtools", "fs-read-file", "os-all", "path-all", "protocol-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon="1.7.0"
lazy_static = "1.4.0"
# image = "0.25.1"
# image = {git="https://codeberg.org/visnk/image-rs.git"}
reqwest="0.11.24"
tokio= {version="1.36.0",features= ["macros"] }
fuzzy-matcher="0.3.7"
num_cpus="1.15.0"
rustc-hash="1.1.0"
# json="0.12.4"
# rs-drivelist = "0.9.3"
# tao = { version = "0.19.0"}
# du="0.1.1"
# gio="0.17.4"
# walkdir="2.3.3"
filesize = "0.2.0"
# jwalk="0.8.1"
imagesize="0.12.0"
# dua-cli="2.19.2"
# dirscan="1.4.1"
# markdown= {git="https://github.com/wooorm/markdown-rs.git"}
opener="0.6.1"
comrak="0.39.1"
# contrie="0.1.4"
chrono="0.4.24"
# strsim="0.10.0"
# notify="5.1.0"
filetime="0.2.21"
# rust_search = "2.0.0"
# infer="0.13.0"
# indicatif="0.17.3"
# radix_trie = "0.2.1"
# rusync="0.7.2"
libc="0.2.144"
sysinfo="0.29.0"
ignore="0.4.20"
dirs="5.0.1"
futures = "0.3"

regex="1.10.2"
# gtk = "0.15.5"
# gio = "0.18.4"
# Native candle inference (future): pin to a candle release that resolves
# the rand_distr version conflict before re-enabling.
# candle-core = "0.3"
# candle-transformers = "0.3"
# candle-nn = "0.3"
# tokenizers = "0.15"
anyhow = "1.0.98" # Good for simple error handling
include_dir = "0.7.3"
memvdb = "0.1.1"
plist="1.7.2" 
text-splitter = { version = "0.27.0" } # Or "tiktoken-rs"
# extractous ="0.3.0"
shiva = {  version = "1.4.9", features = ["html", "markdown", "text", "typst-pdf", "json", "csv", "rtf", "docx", "xml", "xls", "xlsx", "ods", "typst"] }
# hyper="1.6.0"
multipart="0.18.0"
walkdir = "2.3.3"
lnk = "0.4.1"
percent-encoding = "2.3.1"
# [target.x86_64-unknown-linux-gnu.dependencies]
# webkit2gtk = "0.18.2"

# [target.aarch64-unknown-linux-gnu.dependencies]
# webkit2gtk = "0.18.2"
[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

# Force webkit2gtk to 0.18.1 — wry-0.24.x breaks with 0.18.2 (SettingsExt trait scope change)
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "=0.18.1", features = ["v2_36"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
